--- a/examples/audiorecorder/audiorecorder.ui
+++ b/examples/audiorecorder/audiorecorder.ui
@@ -155,6 +155,17 @@
       </property>
      </widget>
     </item>
+    <item row="3" column="0">
+     <widget class="QLabel" name="levelLabel">
+      <property name="text">
+       <string>Audio Level:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="1" colspan="-1">
+     <widget class="QAudioLevel" name="audioLevel">
+     </widget>
+    </item>
    </layout>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
