--- a/src/qtmultimediaquicktools/qtmultimediaquicktools.qrc
+++ b/src/qtmultimediaquicktools/qtmultimediaquicktools.qrc
@@ -23,5 +23,15 @@
         <file>shaders/triplanaryuvvideo_core.vert</file>
         <file>shaders/uyvyvideo_core.frag</file>
         <file>shaders/yuyvvideo_core.frag</file>
+
+        <file>shaders_ng/rgba.vert.qsb</file>
+        <file>shaders_ng/rgba.frag.qsb</file>
+        <file>shaders_ng/bgra.frag.qsb</file>
+        <file>shaders_ng/yuv.vert.qsb</file>
+        <file>shaders_ng/yuv_yv.frag.qsb</file>
+        <file>shaders_ng/nv12.frag.qsb</file>
+        <file>shaders_ng/nv21.frag.qsb</file>
+        <file>shaders_ng/uyvy.frag.qsb</file>
+        <file>shaders_ng/yuyv.frag.qsb</file>
     </qresource>
 </RCC>
