Set metadata when recording to the camera example
Change-Id: I5a914591f9fe9f09c04da4a1e06b29ac0d92ae00
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/examples/multimediawidgets/camera/camera.ui
+++ b/examples/multimediawidgets/camera/camera.ui
@@ -129,6 +129,16 @@
           </property>
          </widget>
         </item>
+        <item row="5" column="0">
+          <widget class="QPushButton" name="metaDataButton">
+          <property name="text">
+           <string>Set metadata</string>
+          </property>
+          <property name="checkable">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
        </layout>
       </widget>
      </widget>
