Change menu item text in camera example
For some reason, the menu items in the camera example will not
appear on Mac if the text description is set to Settings or
Exit.

Change-Id: Idd5baa1283dbb75486f8012a8ae559508b4e6850
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/examples/multimediawidgets/camera/camera.ui
+++ b/examples/multimediawidgets/camera/camera.ui
@@ -363,7 +363,7 @@
   <widget class="QStatusBar" name="statusbar"/>
   <action name="actionExit">
    <property name="text">
-    <string>Exit</string>
+    <string>Close</string>
    </property>
   </action>
   <action name="actionStartCamera">
@@ -378,7 +378,7 @@
   </action>
   <action name="actionSettings">
    <property name="text">
-    <string>Settings</string>
+    <string>Change Settings</string>
    </property>
   </action>
  </widget>
