--- a/examples/multimediawidgets/camera/camera.ui
+++ b/examples/multimediawidgets/camera/camera.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>668</width>
-    <height>422</height>
+    <height>429</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -25,23 +25,7 @@
         <string>Image</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout">
-        <item row="8" column="0">
-         <widget class="QSlider" name="saturationSlider">
-          <property name="minimum">
-           <number>-100</number>
-          </property>
-          <property name="maximum">
-           <number>100</number>
-          </property>
-          <property name="value">
-           <number>0</number>
-          </property>
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-         </widget>
-        </item>
-        <item row="11" column="0">
+        <item row="3" column="0">
          <spacer name="verticalSpacer_2">
           <property name="orientation">
            <enum>Qt::Vertical</enum>
@@ -54,60 +38,6 @@
           </property>
          </spacer>
         </item>
-        <item row="6" column="0">
-         <widget class="QSlider" name="contrastSlider">
-          <property name="minimum">
-           <number>-100</number>
-          </property>
-          <property name="maximum">
-           <number>100</number>
-          </property>
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-         </widget>
-        </item>
-        <item row="3" column="0">
-         <widget class="QSlider" name="brightnessSlider">
-          <property name="minimum">
-           <number>-100</number>
-          </property>
-          <property name="maximum">
-           <number>100</number>
-          </property>
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-         </widget>
-        </item>
-        <item row="2" column="0">
-         <widget class="QLabel" name="label_4">
-          <property name="text">
-           <string>Brightness</string>
-          </property>
-         </widget>
-        </item>
-        <item row="7" column="0">
-         <widget class="QLabel" name="label_2">
-          <property name="text">
-           <string>Saturation</string>
-          </property>
-         </widget>
-        </item>
-        <item row="4" column="0">
-         <widget class="QLabel" name="label_3">
-          <property name="text">
-           <string>Contrast</string>
-          </property>
-         </widget>
-        </item>
-        <item row="12" column="0">
-         <widget class="QLabel" name="label">
-          <property name="text">
-           <string>Exposure Compensation:</string>
-          </property>
-         </widget>
-        </item>
         <item row="0" column="0">
          <widget class="QPushButton" name="takeImageButton">
           <property name="enabled">
@@ -117,19 +47,12 @@
            <string>Capture Photo</string>
           </property>
           <property name="icon">
-           <iconset>
+           <iconset resource="camera.qrc">
             <normaloff>:/images/shutter.svg</normaloff>:/images/shutter.svg</iconset>
           </property>
          </widget>
         </item>
-        <item row="9" column="0">
-         <widget class="QLabel" name="label_5">
-          <property name="text">
-           <string>Hue</string>
-          </property>
-         </widget>
-        </item>
-        <item row="13" column="0">
+        <item row="5" column="0">
          <widget class="QSlider" name="exposureCompensation">
           <property name="minimum">
            <number>-4</number>
@@ -148,16 +71,10 @@
           </property>
          </widget>
         </item>
-        <item row="10" column="0">
-         <widget class="QSlider" name="hueSlider">
-          <property name="minimum">
-           <number>-100</number>
-          </property>
-          <property name="maximum">
-           <number>100</number>
-          </property>
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
+        <item row="4" column="0">
+         <widget class="QLabel" name="label">
+          <property name="text">
+           <string>Exposure Compensation:</string>
           </property>
          </widget>
         </item>
@@ -390,7 +307,9 @@
    <container>1</container>
   </customwidget>
  </customwidgets>
- <resources/>
+ <resources>
+  <include location="camera.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>recordButton</sender>
