Add Track Selection from QML and updated example
Added Q_PROPERTY in QMediaPlayer.h for the obtaining track metadata and
for setting active track
Changed mediaplayer QML example to add track information and change.

Pick-to: 6.2
Change-Id: I1ff228a858079a87b1253d3c7a1ff24d815f2182
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/examples/multimedia/video/mediaplayer/qml.qrc
+++ b/examples/multimedia/video/mediaplayer/qml.qrc
@@ -7,5 +7,6 @@
         <file>PlaybackSeekControl.qml</file>
         <file>PlaybackRateControl.qml</file>
         <file>PlayerMenuBar.qml</file>
+        <file>TracksInfo.qml</file>
     </qresource>
 </RCC>
